--- a/src/app/theme/_variables.scss
+++ b/src/app/theme/_variables.scss
@@ -2,3 +2,4 @@ $primary-font: "Roboto", "Helvetica", "Arial", sans-serif;
 $break-small: 320px;
 $break-mobile: 800px;
 $break-large: 1200px;
+$break-huge: 1800px;
