--- a/src/app/theme/main.scss
+++ b/src/app/theme/main.scss
@@ -1,3 +1,8 @@
 /* main.css will be extracted to main dist folder and is imported in index.html */
 /* This file is for setting global styles  */
 @import 'variables';
+@import '@angular/material/core/theming/all-theme';
+
+body{
+    background:indianred;
+}
