--- a/src/index.ejs
+++ b/src/index.ejs
@@ -10,9 +10,9 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css" />
 	<link rel="stylesheet" href="./assets/css/ionic.css" />
 	<link rel="stylesheet" href="./assets/css/main.css" />
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<style>#str-dlls { display: none }</style>
-    <script src="cordova.js"></script>
+    <% if (htmlWebpackPlugin.options.cordova) { %>
+    	<script src="cordova.js"></script>
+    <% } %>
 </head>
 <body>
 	<ion-app>
@@ -20,10 +20,10 @@
 	</ion-app>
 	<script type="text/javascript" src="hammer.min.js"></script>
 	<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=console.*,Intl.~locale.en&gated=1"></script>
-	<div id="str-dlls">
+    <% if (!htmlWebpackPlugin.options.prod) { %>
 		<%= '<' %>script src="/polyfill.dll.js"<%= '>' %><%= '<' %>/script<%= '>' %>
 		<%= '<' %>script src="/vendor.dll.js"<%= '>' %><%= '<' %>/script<%= '>' %>
-	</div>
-	<script src="/index.js"></script>
+    <% } %>
+	<script src="index.js"></script>
 </body>
 </html>
