Postbuild scripts are written in promises

--- a/src/app/theme/_variables.scss
+++ b/src/app/theme/_variables.scss
@@ -67,7 +67,7 @@ $colors: (
 // The premium icon font for Ionic. For more info, please see:
 // http://ionicframework.com/docs/v2/ionicons/
 
-$ionicons-font-path: "../fonts";
+$ionicons-font-path: "../fonts/ionicons";
 @import "ionicons/dist/scss/ionicons";
 
 
