--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Angular 2 App</title>
+	<title>Kite CS Angular Starter</title>
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta charset='utf-8'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<link rel="icon" href="data:;base64,iVBORw0KGgo=">
-	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css" />
 	<link rel="stylesheet" href="./assets/css/main.css" />
     <% if (htmlWebpackPlugin.options.cordova) { %>
     	<script src="cordova.js"></script>
@@ -17,7 +15,6 @@
 	<ion-app>
 		Loading...
 	</ion-app>
-	<script type="text/javascript" src="hammer.min.js"></script>
 	<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=console.*,Intl.~locale.en&gated=1"></script>
     <% if (!htmlWebpackPlugin.options.prod) { %>
 		<%= '<' %>script src="/polyfill.dll.js"<%= '>' %><%= '<' %>/script<%= '>' %>
