nodemon added to node:sass but still not the required load capability in HMR

--- a/src/app/theme/main.scss
+++ b/src/app/theme/main.scss
@@ -3,6 +3,9 @@
 @import 'variables';
 
 body{
-    background:purple;
+    background:cornflowerblue;
 }
 
+.scroll-content{
+    background:green;
+}
