--- a/src/app/theme/main.scss
+++ b/src/app/theme/main.scss
@@ -1,13 +1,13 @@
 /* main.css will be extracted to main dist folder and is imported in index.html */
 /* This file is for setting global styles  */
-@import 'variables';
+// @import 'variables';
 
 body{
-    background:cornflowerblue;
+    background:pink;
 }
 
 .scroll-content{
-    background:green;
+    background:gray;
 }
 
 .fullscreen{
