--- a/src/index.ejs
+++ b/src/index.ejs
@@ -12,9 +12,8 @@
 </head>
 <body>
 	<ion-app>
-		Loading...
+		Loading at the ejs
 	</ion-app>
-	<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=console.*,Intl.~locale.en&gated=1"></script>
     <% if (!htmlWebpackPlugin.options.prod) { %>
 		<%= '<' %>script src="/polyfill.dll.js"<%= '>' %><%= '<' %>/script<%= '>' %>
 		<%= '<' %>script src="/vendor.dll.js"<%= '>' %><%= '<' %>/script<%= '>' %>
