--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -1,13 +1,12 @@
 /* main.css will be extracted to main dist folder and is imported in index.html */
 /* This file is for setting global styles  */
-// @import 'variables';
 
 body{
     background:pink;
 }
 
 .scroll-content{
-    background:gray;
+    background:cyan;
 }
 
 .fullscreen{
