--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -1,12 +1,8 @@
 /* main.css will be extracted to main dist folder and is imported in index.html */
 /* This file is for setting global styles  */
 
-body{
-    background:pink;
-}
-
 .scroll-content{
-    background:yellow;
+    background:gray;
 }
 
 .fullscreen{
