Refactoring on components

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -11,9 +11,7 @@
     <% } %>
 </head>
 <body>
-	<ion-app>
-		Loading at the ejs
-	</ion-app>
+	<ion-app></ion-app>
     <% if (!htmlWebpackPlugin.options.prod) { %>
 		<%= '<' %>script src="/polyfill.dll.js"<%= '>' %><%= '<' %>/script<%= '>' %>
 		<%= '<' %>script src="/vendor.dll.js"<%= '>' %><%= '<' %>/script<%= '>' %>
