--- a/src/app/theme/main.scss
+++ b/src/app/theme/main.scss
@@ -1,6 +1,10 @@
 /* main.css will be extracted to main dist folder and is imported in index.html */
 /* This file is for setting global styles  */
 
+.scroll-content{
+  background:white;
+}
+
 .md .marginTopAdjusted > ion-refresher-content, 
 .md .marginTopAdjusted > .fixed-content, 
 .md .marginTopAdjusted > .scroll-content{
