--- a/src/app/theme/main.scss
+++ b/src/app/theme/main.scss
@@ -1,6 +1,11 @@
 /* main.css will be extracted to main dist folder and is imported in index.html */
 /* This file is for setting global styles  */
 
+a{
+  text-decoration: none;
+  color:inherit;
+}
+
 .scroll-content{
   background:white;
 }
@@ -29,4 +34,12 @@ ion-list{
 
 .item{
   padding-left:0px; 
+}
+
+.item [item-right]:last-child{
+  margin-right:0px;
+}
+
+.item-inner{
+  padding-right:0px;
 }
