--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,13 +9,32 @@
   <% if (htmlWebpackPlugin.options.cordova) { %>
     <script src="cordova.js"></script>
   <% } %>
+  <style>
+    body{margin:0px;}
+    .page-loader-logo{width:160px;height:160px;}  
+    .page-loader{
+        background: #fff;
+        display: flex;
+        align-items: center; 
+        justify-content: center;
+        z-index:9;
+        position:absolute;
+        width:100%;
+        height:100%;
+        top:0px;
+    }
+  </style>
 </head>
 <body>
-	<ion-app></ion-app>
-    <% if (!htmlWebpackPlugin.options.prod) { %>
-		<%= '<' %>script src="/polyfill.dll.js"<%= '>' %><%= '<' %>/script<%= '>' %>
-		<%= '<' %>script src="/vendor.dll.js"<%= '>' %><%= '<' %>/script<%= '>' %>
-    <% } %>
+	<ion-app>
+    <div class="page-loader">
+      <img class="page-loader-logo" src="app/assets/images/burger.png">
+    </div>      
+  </ion-app>
+  <% if (!htmlWebpackPlugin.options.prod) { %>
+    <%= '<' %>script src="/polyfill.dll.js"<%= '>' %><%= '<' %>/script<%= '>' %>
+    <%= '<' %>script src="/vendor.dll.js"<%= '>' %><%= '<' %>/script<%= '>' %>
+  <% } %>
 	<script src="index.js"></script>
 </body>
 </html>
